--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,9 @@
     "autoload": {
         "files": [
             "src/Cli.php",
-            "src/Engine.php"
+            "src/Engine.php",
+            "src/Games/Even.php",
+            "src/Games/Calc.php"
         ]
     },
     "require-dev": {
